--- a/Hosted Weather App/web-server/public/css/styles.css
+++ b/Hosted Weather App/web-server/public/css/styles.css
@@ -1,3 +1,4 @@
+/* IMPORTING STYLESHEETS, FOR MY GITHUB ICON IN FOOTER AND GOOGLE FONTS FOR MY FONT CHOICE */
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
 @import url(https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Geist+Mono:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap);
 
